added nav section

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is my header</h1>
+    <section class="menu-area">
+       <div class="logo" id="logo"></div>
+       <div id="menu-items">
+        <ul class="menu-list">
+          <li> <a href="">Home</a></li>
+          <li> <a href="">About</a></li>
+          <li class="dropdown"> <a href="">Services</a>
+            <ul class="dropdown-content">
+              <li><a href="">Design and Branding</a></li>
+              <li><a href="">Printing</a></li>
+              <li><a href="">UI/UX Design</a></li>
+              <li><a href="">Web Development</a></li>
+            </ul>
+          </li>
+          <li> <a href="">Portfolio</a></li>
+          <li> <a href="">Package</a></li>
+          <li> <a href="">Request Quote</a></li>
+          <li> <a href="">Contact Us</a></li>
+        </ul>
+       </div>
+    </section>
 </body>
 </html>
